--- a/templates/employe/new.html.twig
+++ b/templates/employe/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Employe{% endblock %}
+{% block title %}Nouvel Employé{% endblock %}
 
 {% block body %}
-    <h1>Create new Employe</h1>
+    <h1>Ajout d'un nouvel employé</h1>
 
     {{ include('employe/_form.html.twig') }}
 
-    <a href="{{ path('employe_index') }}">back to list</a>
+    <a href="{{ path('employe_index') }}" class="btn btn-secondary">Retour à la liste</a>
 {% endblock %}
