--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
-
-{% block body %}
-Hello
+{% block title %}Accueil
 {% endblock %}
+
+{% block body %}{% endblock %}
