--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -32,10 +32,10 @@
 					Employés
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="">
+					<a class="dropdown-item" href="{{ path('employe_show') }}">
 						<i class="fa fa-list"></i>
 						Liste</a>
-					<a class="dropdown-item" href="">
+					<a class="dropdown-item" href="{{ path('employe_new') }}">
 						<i class="fa fa-plus-circle"></i>
 						Ajouter un employé</a>
 				</div>
