--- a/templates/employe/index.html.twig
+++ b/templates/employe/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Employe index</h1>
 
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th>Id</th>
