--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -32,7 +32,7 @@
 					Employés
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="{{ path('employe_show') }}">
+					<a class="dropdown-item" href="{{ path('employe_index') }}">
 						<i class="fa fa-list"></i>
 						Liste</a>
 					<a class="dropdown-item" href="{{ path('employe_new') }}">
