--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,6 @@
 	</head>
 	<body>
 		{% include "menu.html.twig" %}
-		{% block body %}{% endblock %}
+		<div class="container">{% block body %}{% endblock %}</div>
 	</body>
 </html>
