typo fixed on ProfilController

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -74,7 +74,7 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<img src="/images/photo_profil/{{ app.user.photo }}" alt="">
+							<img src="/images/photo_profil/{{ app.user.photo }}" alt="" style="width:50px">
 							<i class="fa fa-user"></i>
 							{{ app.user.prenom|capitalize }}
 							{{ app.user.nom|capitalize }}
