--- a/templates/employe/edit.html.twig
+++ b/templates/employe/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Employe{% endblock %}
 
 {% block body %}
-    <h1>Edit Employe</h1>
+    <h1>Modifier employé</h1>
 
-    {{ include('employe/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('employe/_form.html.twig', {'button_label': 'Enregistrer'}) }}
 
-    <a href="{{ path('employe_index') }}">back to list</a>
+    {# <a href="{{ path('employe_index') }}">Retour à la liste</a> #}
 
     {{ include('employe/_delete_form.html.twig') }}
 {% endblock %}
