--- a/templates/employe/show.html.twig
+++ b/templates/employe/show.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Employe{% endblock %}
 
 {% block body %}
-    <h1>Employe</h1>
+    <h1>Fiche employé</h1>
 
-    <table class="table">
+    <table class="table table-bordered table-striped">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -50,9 +50,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('employe_index') }}">back to list</a>
+    <div><a href="{{ path('employe_index') }}" class="link">Retour à la liste</a></div>
 
-    <a href="{{ path('employe_edit', {'id': employe.id}) }}">edit</a>
+    <div><a href="{{ path('employe_edit', {'id': employe.id}) }}" class="link">Modifier</a></div>
 
     {{ include('employe/_delete_form.html.twig') }}
 {% endblock %}
