--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,31 @@
 {% block title %}Accueil
 {% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+
+    <div class="row justify-content-evently flex-wrap">
+        <div class="col-md-6">
+           <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/images_front/slide4.jpg" class="d-block w-100 h-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/images_front/slide3.jpg" class="d-block w-100 h-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/images_front/slide5.jpg" class="d-block w-100 h-600px" alt="...">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 text-center text-light d-flex flex-column justify-content-center">
+            <div><img src="images/images_front/logosclair.png" alt=""></div>
+            <div class="m-2">Bienvenu(e) au service intranet de l'entreprise!! Veuillez vous connecter. </div>
+            <div class="m-2">Si vous n'avez pas de compte, rapprocher vous auprès de la direction afin d'en créer un.</div>
+        </div>
+    </div>
+
+{% endblock %}
 
