--- a/templates/documents/new.html.twig
+++ b/templates/documents/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('documents/_form.html.twig') }}
 
-    <a href="{{ path('documents_index') }}">back to list</a>
+    <a href="{{ path('documents_profil') }}">back to list</a>
 {% endblock %}
